# gluon-plasma

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
Assets/Shaders/Sources/: triangle.frag.glsl  triangle.vert.glsl
Sources/: CMakeLists.txt  defines.h  gbuffer.cpp  gbuffer.h  gmesh_loader.cpp  gmesh_loader.h  gresources.cpp  gresources.h  gshader.cpp  gshader.h  gswapchain.cpp  gswapchain.h  gvkcommon.h  gvulkan.cpp  gvulkan.h  main.cpp  tinygltf.cpp  utils.h
examples/: CMakeLists.txt
examples/button/: button.cpp
examples/helloworld/: helloworld.cpp
examples/rectangles/: rectangles.cpp
examples/text/: text.cpp
resources/fonts/: DIMIS.json  Lamthong.json  charset.txt  make_font_atlas.bat  roboto.json
shaders/: rect.frag.glsl  test.frag.glsl  test.vert.glsl  text.frag.glsl  text.vert.glsl
shaders/src/: test.frag.sc  test.vert.sc  uniforms.sh  varying.def.sc
src/: CMakeLists.txt  gln_color.h  gln_defines.h  gln_easing.h  gln_interpolate.h  gln_math.h  gln_renderbackend_buffer.cpp  gln_renderbackend_program.cpp  gln_renderbackend_texture.cpp  gln_text.h  main.cpp  render_backend.cpp  render_backend.h  renderer.cpp  renderer.h  timer.cpp
src/gluon/api/: CMakeLists.txt  gln_api_defs.h  gln_application.cpp  gln_application.h  gln_application_p.h  gln_easing.h  gln_inputs.h  gln_interpolate.h  gln_renderer.cpp  gln_renderer.h  gln_renderer_p.h  gln_text.cpp  gln_text.h  gln_widgets.cpp  gln_widgets.h  gln_widgets_p.h
src/gluon/core/: CMakeLists.txt  gln_color.cpp  gln_color.h  gln_defines.h  gln_macros.h  gln_math.h  gln_observable.cpp  gln_observable.h  gln_property.h  gln_signal.h  gln_timer.h
src/gluon/render_backend/: CMakeLists.txt  gln_renderbackend.cpp  gln_renderbackend.h  gln_renderbackend_buffer.cpp  gln_renderbackend_defs.h  gln_renderbackend_p.h  gln_renderbackend_program.cpp  gln_renderbackend_texture.cpp
src/gluon/render_backend/backend_opengl/: gln_renderbackend_opengl.cpp  gln_renderbackend_opengl.h
